--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,10 +8,10 @@ environment:
   sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
-  collection: ^1.17.1
+  collection:
   flutter:
     sdk: flutter
-  jovial_svg: ^1.1.14
+  jovial_svg:
 
 dev_dependencies:
   flutter_test:
